fixes youtube video that was to big on mobile phones

--- a/app/assets/stylesheets/tabs.css.scss
+++ b/app/assets/stylesheets/tabs.css.scss
@@ -131,6 +131,9 @@
 .tab-content img {
   max-width: 100%;
 }
+embed{
+  width: 100%;
+}
 
 
 
